--- a/app/src/main/res/layout/dialog_about.xml
+++ b/app/src/main/res/layout/dialog_about.xml
@@ -22,7 +22,6 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="10dp"
-                android:layout_marginBottom="10dp"
                 android:padding="10dp"
                 android:text="About"
                 android:textColor="@color/white"
@@ -35,15 +34,15 @@
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="10dp"
-                android:padding="10dp"
+                android:padding="8dp"
                 android:src="@drawable/ic_cross"
                 app:tint="@color/white" />
 
         </RelativeLayout>
 
         <ImageView
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_gravity="center"
             android:layout_margin="10dp"
             android:src="@drawable/logo" />
@@ -66,14 +65,16 @@
             android:padding="10dp"
             android:text="This is a simple Text Detection application which can detect text from an image."
             android:textAlignment="center"
-            android:textSize="18sp" />
+            android:textSize="16sp" />
 
         <Button
             android:id="@+id/btnCLose"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="15dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="20dp"
             android:text="Close"
             android:textColor="@color/white" />
 
