--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -120,7 +120,7 @@
                     android:layout_weight="1"
                     android:background="@android:color/holo_red_dark"
                     android:gravity="center"
-                    android:orientation="vertical">
+                    android:orientation="horizontal">
 
                     <ImageView
                         android:layout_width="50dp"
@@ -131,7 +131,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="10dp"
                         android:text="Camera"
                         android:textColor="@color/white"
                         android:textSize="28sp" />
@@ -145,7 +145,7 @@
                     android:layout_weight="1"
                     android:background="@color/black"
                     android:gravity="center"
-                    android:orientation="vertical">
+                    android:orientation="horizontal">
 
                     <ImageView
                         android:layout_width="50dp"
@@ -156,7 +156,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="10dp"
                         android:text="Gallery"
                         android:textColor="@color/white"
                         android:textSize="28sp" />
@@ -183,7 +183,6 @@
                 <ScrollView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_above="@id/versionLayout"
                     android:fillViewport="true">
 
                     <LinearLayout
@@ -288,34 +287,19 @@
                             android:layout_height="1px"
                             android:background="@android:color/darker_gray" />
 
+                        <TextView
+                            android:id="@+id/tvVersion"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_margin="10dp"
+                            android:layout_marginTop="20dp"
+                            android:text="Version: 1.01"
+                            android:textColor="@color/white" />
+
                     </LinearLayout>
 
                 </ScrollView>
-
-                <LinearLayout
-                    android:id="@+id/versionLayout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:gravity="center"
-                    android:layout_gravity="bottom"
-                    android:orientation="vertical">
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1px"
-                        android:background="@android:color/darker_gray" />
-
-                    <TextView
-                        android:id="@+id/tvVersion"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
-                        android:layout_marginTop="10dp"
-                        android:text="Version: 1.01"
-                        android:textColor="@color/white" />
-
-                </LinearLayout>
 
             </RelativeLayout>
 
